<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_dashboard_black_24dp"/>
    </group>

    <item android:title="@string/nav_order">
        <menu>
            <group android:checkableBehavior="single">
                <!--<item-->
                    <!--android:id="@+id/nav_order_requesition"-->
                    <!--android:icon="@drawable/ic_shopping_cart_black_24dp"-->
                    <!--android:title="@string/nav_order_requesition" />-->
                <!--<item-->
                    <!--android:id="@+id/nav_order_quantity"-->
                    <!--android:icon="@drawable/ic_shopping_cart_black_24dp"-->
                    <!--android:title="@string/nav_order_quantity" />-->
                <!--<item-->
                    <!--android:id="@+id/nav_order_purches"-->
                    <!--android:icon="@drawable/ic_shopping_cart_black_24dp"-->
                    <!--android:title="@string/nav_order_purches" />-->
                <item
                    android:id="@+id/nav_order_purches_history"
                    android:icon="@drawable/ic_list_black_24dp"
                    android:title="@string/nav_order_purches_history" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_shipment">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/seller_purchase_order_list"
                    android:title="@string/nav_order_list"
                    android:icon="@drawable/ic_list_black_24dp"/>
                <!--<item-->
                    <!--android:id="@+id/seller_shipment_list"-->
                    <!--android:title="@string/nav_shipment_list"-->
                    <!--android:icon="@drawable/ic_list_black_24dp"/>-->
                <item
                    android:id="@+id/seller_shipment_history_list"
                    android:title="@string/nav_shipment_history_list"
                    android:icon="@drawable/ic_list_black_24dp"/>
            </group>
        </menu>
    </item>

    <item android:title="Receiving">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_receiving"
                    android:title="@string/nav_order_receiving"
                    android:icon="@drawable/ic_list_black_24dp"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_rewards">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_points"
                    android:title="@string/nav_point"
                    android:icon="@drawable/ic_star_border_black_24dp"/>
            </group>
        </menu>
    </item>

    <item android:title="Preference">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/preference"
                    android:title="@string/preference"
                    android:icon="@drawable/ic_settings_black_24dp"/>
                <!--<item-->
                    <!--android:id="@+id/nav_logout"-->
                    <!--android:title="@string/logout" />-->
            </group>
        </menu>
    </item>


</menu>